# ADAA_E2

./: .gitignore  CMakeLists.txt  Parte1_M.cpp  Parte2_M  Parte2_M.cpp  Parte3_M.cpp  README.md  central.h  edge.h  fordFulkerson.h  ford_fulkerson.h  kruskal.h  main.cpp  punto.h  sonar-project.properties  team.txt  test_main.cpp  tsp.h  unionFind.h  union_find.h
.github/workflows/: build.yml
Entradas/: Entrada01.txt
tests/: test_central.cpp  test_fordFulkerson.cpp  test_kruskal.cpp  test_tsp.cpp
